--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="black">#000</color>
-    <color name="gray_tab_bg">#aaa</color>
+    <color name="gray_tab_bg">#F4F5F6</color>
 </resources>
